# altitude_estimator

./: .gitmodules  CMakeLists.txt  README.md
data/: cootha_gps_noise.npy  cootha_sensor_noise.npy
src/ukf/: CMakeLists.txt  sensor_fusion.cpp  sensor_fusion.h  unscented_kalman_filter.cpp  unscented_kalman_filter.h
